# python.tufte

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile.base  Makefile  README.md  pyproject.toml  python.tufte.code-workspace  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  new_release.yml
docs/source/: base.rst  conf.py  index.rst
notebooks/: plots.ipynb
tests/: test_bar.py
tufte/: __init__.py  bar.py  base.py  box.py  line.py  multi_plots.py  scatter.py  tufte.py
tufte/docs/source/: conf.py  index.rst
