[tool.poetry]
name = "python.tufte"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipykernel = "^6.13.0"
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
